--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
   <div id="wall">
-    <div class="tag-1"></div>
+    <div class="tag-1"
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
+  display: block;></div>
+
     <div id="tag-2"></div>
     <div id="tag-3" class="slick wicked"></div>
     <div class="parent">
@@ -18,6 +22,9 @@
     </div>
     <div class="parent">
       <div id="tag-5" class="slick"></div>
+      #wall .tag-1 {
+  display: none;
+}
     </div>
     <div class="parent">
       <div></div>
